--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vite": "^4.4.5"
   },
   "dependencies": {
-    "@axe-core/playwright": "^4.8.1"
+    "@axe-core/playwright": "^4.8.1",
+    "fabric": "^5.3.0"
   }
 }
