--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.40.0",
+    "@types/fabric": "^5.3.6",
     "@types/node": "^20.10.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
